# WordGamePY

./: .gitignore  README.md  db.sqlite3  pyproject.toml  word_game.py
functions/: classes.py  connect_db.py  create_id.py  hash_password.py  manage_db.py  randomic_id.py
functions/manage/: difficulty.py  topics.py  users.py  words.py
functions/manage/sql/: difficulty_schema.sql  topics_schema.sql  users_schema.sql  words_schema.sql
functions/manage_tables/: difficulty.py  topics.py  users.py  words.py
