[tool.poetry]
name = "word-game"
version = "0.1.0"
description = "Word Game é um jogo de raciocínio que irá aumentar seu vocabulario rapidamente. Desenvolvido em Python."
authors = ["Mateus Lopes <mateus@gmail.com>","Lucas Vieira <lucasdavid.xavier@gmail.com>"]
readme = "README.md"
packages = [{include = "word_game"}]

[tool.poetry.dependencies]
python = "^3.8"
db-sqlite3 = "^0.0.1"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
